--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/jven/jvensite4#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "http": "0.0.0",
+    "mustache-express": "^1.2.8",
     "path": "^0.12.7"
   }
 }
