--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal website for jven.",
   "main": "server/server.js",
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node src/server/server.js"
   },
   "repository": {
     "type": "git",
