--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "mustache-express": "^1.2.8",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "typescript": "^3.2.2"
   }
 }
